Update rubocop config

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -11,7 +11,7 @@ Style/DocumentationMethod:
   Exclude:
     - 'test/**/*.rb'
 
-Layout/EmptyLinesAroundClassBody:
+Style/SingleLineMethods:
   Exclude:
     - 'test/**/*.rb'
 
@@ -19,8 +19,32 @@ Layout/EmptyLinesAroundClassBody:
 Lint/Debugger:
   Enabled: true
 
+# ==============================================================================
+# Layout
+# ==============================================================================
+
 Metrics/LineLength:
   Max: 150
+
+Layout/EmptyLineAfterGuardClause:
+  Enabled: false
+
+Layout/EmptyLinesAroundModuleBody:
+  Enabled: false
+
+Layout/EmptyLinesAroundClassBody:
+  Enabled: false
+
+Layout/EmptyLinesAroundBlockBody:
+  Enabled: false
+
+# https://unix.stackexchange.com/a/18789
+Layout/TrailingBlankLines:
+  EnforcedStyle: final_newline
+
+# ==============================================================================
+# Strings
+# ==============================================================================
 
 Style/StringLiterals:
   EnforcedStyle: double_quotes
@@ -31,19 +55,42 @@ Style/FrozenStringLiteralComment:
 Naming/HeredocDelimiterNaming:
   Enabled: false
 
+# ==============================================================================
+# Numbers
+# ==============================================================================
+
+Style/ZeroLengthPredicate:
+  Enabled: false
+
+Style/NumericPredicate:
+  Enabled: false
+
+Naming/VariableNumber:
+  EnforcedStyle: snake_case
+
+# ==============================================================================
+# Braces, Brackets, & Parens
+# ==============================================================================
+
+Style/DefWithParentheses:
+  Enabled: false
+
+Style/MethodCallWithoutArgsParentheses:
+  Enabled: false
+
 # Only use braces if the function expects a hash argument. [different in Ruby 2.7+](https://blog.saeloun.com/2019/10/07/ruby-2-7-keyword-arguments-redesign.html)
 Style/BracesAroundHashParameters:
   Enabled: false
 
-Layout/IndentFirstHashElement:
-  EnforcedStyle: consistent
+Style/WordArray:
+  EnforcedStyle: brackets
 
-Layout/IndentFirstArrayElement:
-  EnforcedStyle: consistent
+Style/SymbolArray:
+  EnforcedStyle: brackets
 
-# https://unix.stackexchange.com/a/18789
-Layout/TrailingBlankLines:
-  EnforcedStyle: final_newline
+# ==============================================================================
+# Trailing Commas
+# ==============================================================================
 
 Style/TrailingCommaInArguments:
   EnforcedStyleForMultiline: comma
@@ -54,13 +101,45 @@ Style/TrailingCommaInArrayLiteral:
 Style/TrailingCommaInHashLiteral:
   EnforcedStyleForMultiline: comma
 
-Layout/EmptyLineAfterGuardClause:
+# ==============================================================================
+# Fewer lines doesn't mean better code
+# ==============================================================================
+
+Metrics/ModuleLength:
   Enabled: false
 
-Style/DefWithParentheses:
+Metrics/ClassLength:
   Enabled: false
 
-Style/MethodCallWithoutArgsParentheses:
+Metrics/MethodLength:
+  Enabled: false
+
+Metrics/BlockLength:
+  Enabled: false
+
+# ==============================================================================
+# Names
+# ==============================================================================
+
+# Everything else is snake case, numbers should be too.
+Naming/VariableNumber:
+  EnforcedStyle: snake_case
+
+# ==============================================================================
+# Unsorted
+# ==============================================================================
+
+# Default value (special_inside_parentheses) is ridiculous.
+# Look for yourself: https://www.rubydoc.info/gems/rubocop/0.69.0/RuboCop/Cop/Layout/IndentFirstHashElement
+Layout/IndentFirstHashElement:
+  EnforcedStyle: consistent
+
+# Default value (special_inside_parentheses) is ridiculous.
+# Look for yourself: https://www.rubydoc.info/gems/rubocop/0.69.0/RuboCop/Cop/Layout/IndentFirstArrayElement
+Layout/IndentFirstArrayElement:
+  EnforcedStyle: consistent
+
+Layout/AlignHash:
   Enabled: false
 
 # Explicit, not redundant
@@ -71,39 +150,17 @@ Style/RedundantReturn:
 Style/RedundantSelf:
   Enabled: false
 
-# Use of `&` with bracket access isn't what I'd call "readable".
+# `x&.y&.[](:argument)` isn't what I'd call "readable".
+# https://stackoverflow.com/questions/34794697/using-with-the-safe-navigation-operator-in-ruby
 Style/SafeNavigation:
   Enabled: false
 
-Style/WordArray:
-  EnforcedStyle: brackets
-
-Style/SymbolArray:
-  EnforcedStyle: brackets
-
 # TODO: File issue to ignore enums when using `EnforcedStyle: assign_inside_condition`.
 Style/ConditionalAssignment:
-  # EnforcedStyle: assign_inside_condition
-  # EnforcedStyle: assign_to_condition
   Enabled: false
 
 Lint/HandleExceptions:
   AllowComments: true
-
-# Lint/UnneededCopDisableDirective:
-#   Enabled: false
-
-Metrics/BlockLength:
-  Enabled: false
-
-Metrics/ClassLength:
-  Enabled: false
-
-Metrics/ModuleLength:
-  Enabled: false
-
-Metrics/MethodLength:
-  Enabled: false
 
 Metrics/AbcSize:
   Enabled: false
@@ -114,25 +171,5 @@ Metrics/CyclomaticComplexity:
 Metrics/PerceivedComplexity:
   Enabled: false
 
-Layout/EmptyLinesAroundBlockBody:
-  Enabled: false
-
-Layout/EmptyLinesAroundBlockBody:
-  Enabled: false
-
-Layout/EmptyLinesAroundBlockBody:
-  Enabled: false
-
-Style/ZeroLengthPredicate:
-  Enabled: false
-
-Style/NumericPredicate:
-  Enabled: false
-
 Style/CommentedKeyword:
   Enabled: False
-
-Naming/VariableNumber:
-  EnforcedStyle: snake_case
-
-# [1]: https://medium.com/@nikgraf/why-you-should-enforce-dangling-commas-for-multiline-statements-d034c98e36f8
